# percona-binlog-server

./: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.cpp  connection_config.json  main_config.json  master_config.json
.github/workflows/: cmake.yml
cmake/: FindMySQL.cmake  Findzstd.cmake  compiler_warnings.cmake
extra/cmake_presets/aws-sdk-cpp/: CMakePresets.json
extra/cmake_presets/boost/: CMakePresets.json
extra/mysql_protocol/mysqlrouter/: classic_protocol.h  classic_protocol_binary.h  classic_protocol_codec_binary.h  classic_protocol_codec_session_track.h  classic_protocol_codec_wire.h  classic_protocol_frame.h  classic_protocol_session_track.h  classic_protocol_wire.h
mtr/: README
mtr/binlog_streaming/include/: detect_connection_user_and_host.inc  diff_with_storage_object.inc  extract_init_connect_variable_value.inc  have_binsrv.inc  identify_storage_backend.inc  patch_binlog_in_use_flag.inc  set_up_binsrv_environment.inc  tear_down_binsrv_environment.inc  terminate_binsrv.inc  trigger_binsrv_pull.inc  v80_v84_compatibility_defines.inc  wait_for_pattern_count_in_file.inc
mtr/binlog_streaming/r/: binlog_flush.result  binsrv.result  checkpointing.result  checkpointing_verification.result  cli_validation.result  config_validation.result  connection_failures.result  data_directory_8_0_to_8_4_upgrade.result  gtid_purged.result  gtid_renumbering.result  gtid_renumbering_local_rotation.result  gtid_renumbering_resume.result  gtid_renumbering_resume_after_partial.result  gtid_rewrite_enforce_checksums.result  kill_and_restart.result  list.result  pull_mode.result  purge_binlogs.result  read_timeout_flush.result  resume_streaming.result  rewrite_mode.result  rewrite_mode_transition_and_failover.result  search_by_gtid_set_gtid.result  search_by_gtid_set_nogtid.result  search_by_gtid_set_tagged_gtid.result  search_by_timestamp.result  ssl_connection.result  ssl_negative.result  storage_corruption.result  thousand_binlogs.result
mtr/binlog_streaming/t/: binlog_flush.combinations  binlog_flush.test  binsrv.combinations  binsrv.test  checkpointing.combinations  checkpointing.test  checkpointing_verification-master.opt  checkpointing_verification.combinations  checkpointing_verification.test  cli_validation.test  config_validation.test  connection_failures.test  data_directory_8_0_to_8_4_upgrade.test  gtid_purged.test  gtid_renumbering.test  gtid_renumbering_resume.test  (+25 more)
mysqlrouter/: classic_protocol_clone.h  classic_protocol_codec.h  classic_protocol_codec_base.h  classic_protocol_codec_binary.h  classic_protocol_codec_clone.h  classic_protocol_codec_error.h  classic_protocol_codec_frame.h  classic_protocol_codec_message.h  classic_protocol_codec_session_track.h  classic_protocol_codec_wire.h  classic_protocol_constants.h  classic_protocol_message.h  classic_protocol_session_track.h
packaging/debian/: changelog  control  rules
packaging/rpm/: binlog-server.spec
packaging/scripts/: binlog-server_builder.sh
src/: app.cpp  app_version.hpp  minimysql_app.cpp
src/binsrv/: basic_logger.cpp  basic_logger.hpp  basic_logger_fwd.hpp  basic_storage_backend.cpp  basic_storage_backend.hpp  basic_storage_backend_fwd.hpp  binlog_file_metadata.cpp  binlog_file_metadata.hpp  binlog_file_metadata_fwd.hpp  composite_binlog_name.cpp  composite_binlog_name.hpp  composite_binlog_name_fwd.hpp  connection_config.cpp  connection_config.hpp  connection_config_fwd.hpp  cout_logger.cpp  cout_logger.hpp  ctime_timestamp.cpp  ctime_timestamp.hpp  ctime_timestamp_fwd.hpp  ctime_timestamp_range.cpp  ctime_timestamp_range.hpp  ctime_timestamp_range_fwd.hpp  event_flag.hpp  event_flag_fwd.hpp  event_header.cpp  event_header.hpp  event_header_fwd.hpp  event_type.hpp  event_type_fwd.hpp  exception_handling_helpers.cpp  exception_handling_helpers.hpp  file_logger.cpp  file_logger.hpp  filesystem_storage.cpp  filesystem_storage.hpp  filesystem_storage_backend.cpp  filesystem_storage_backend.hpp  filesystem_storage_fwd.hpp  log_severity.hpp  (+48 more)
src/easymysql/: binlog.cpp  binlog.hpp  binlog_deimpl_private.hpp  binlog_fwd.hpp  config_common_types.hpp  connection.cpp  connection.hpp  connection_config.cpp  connection_config.hpp  connection_config_fwd.hpp  connection_deimpl_private.hpp  connection_fwd.hpp  core_error.cpp  core_error.hpp  core_error_helpers_private.cpp  core_error_helpers_private.hpp  library.cpp  library.hpp  library_fwd.hpp  replication_config.hpp  replication_config_fwd.hpp  ssl_config.hpp  ssl_config_fwd.hpp  ssl_mode_type.hpp  ssl_mode_type_fwd.hpp  tls_config.hpp  tls_config_fwd.hpp
src/minimysql/: caching_sha2_password_authenticator.cpp  caching_sha2_password_authenticator.hpp  connection_context.cpp  connection_context.hpp  connection_context_fwd.hpp  network_io_operations.cpp  network_io_operations.hpp  network_io_operations_fwd.hpp  network_service.cpp  network_service.hpp  sample_event_collection.cpp  sample_event_collection.hpp
src/util/: bnf_parser_helpers.hpp  bounded_string_storage.hpp  bounded_string_storage_fwd.hpp  byte_span.hpp  byte_span_extractors.hpp  byte_span_fwd.hpp  byte_span_inserters.hpp  byte_span_packed_int_constants.hpp  command_line_helpers.cpp  command_line_helpers.hpp  command_line_helpers_fwd.hpp  common_optional_types.hpp  composite_name.hpp  composite_name_fwd.hpp  conversion_helpers.hpp  crc_helpers.cpp  crc_helpers.hpp  ct_string.hpp  ctime_timestamp.cpp  ctime_timestamp.hpp  ctime_timestamp_fwd.hpp  ctime_timestamp_range.cpp  ctime_timestamp_range.hpp  ctime_timestamp_range_fwd.hpp  exception_helpers.hpp  exception_location_helpers.hpp  flag_set.hpp  flag_set_fwd.hpp  impl_helpers.hpp  mixin_exception_adapter.hpp  native_file_operations_helpers.hpp  native_file_operations_helpers_posix.cpp  nv_tuple.hpp  nv_tuple_from_command_line.hpp  nv_tuple_from_json.hpp  nv_tuple_fwd.hpp  nv_tuple_json_support.hpp  nv_tuple_to_json.hpp  redirectable.hpp  semantic_version.cpp  (+5 more)
tests/: CMakeLists.txt  byte_span_encoding_test.cpp  event_test.cpp  gtid_set_test.cpp  gtid_test.cpp  tag_test.cpp  uuid_test.cpp
(+217 files in other folders)
